Bug 1818236 - Explicitly size and align search-textbox icons. r=Gijs
The behavior before was:

 * The search icon to the left was 12px (intrinsic size of the svg).
 * The clear button was 14px (intrinsic size of the svg).
 * The search icon to the right was 14px by virtue of being in a <deck>
   with the clear button.

Explicitly size all of them at 14px. Explicitly center the right icons
(the XUL behavior was rather odd...).

Clean-up a bit search-textbox.css to have less macOS special-cases.

Differential Revision: https://phabricator.services.mozilla.com/D170628

UltraBlame original commit: 604acca9d69cfe77626cbdc0b05c9667aae81872

--- a/toolkit/themes/shared/search-textbox.css
+++ b/toolkit/themes/shared/search-textbox.css
@@ -312,95 +312,87 @@ color
 GrayText
 ;
 }
-/
-*
-On
-macOS
+.
+textbox
 -
-moz
--
-default
--
-appearance
-:
-searchbox
-provides
-the
 search
-icon
-*
-/
-media
-not
-(
 -
-moz
--
-platform
-:
-macos
-)
+icons
 {
+align
+-
+items
 :
-host
-(
+center
+;
+justify
+-
+items
 :
-not
-(
-[
-searchbutton
-]
-)
-)
->
+center
+;
+}
+.
+textbox
+-
+search
+-
+icon
 .
 textbox
 -
 search
 -
 sign
-{
-list
+.
+textbox
 -
-style
--
-image
-:
-url
-(
-chrome
-:
-/
-/
-global
-/
-skin
-/
-icons
-/
 search
 -
-textbox
+clear
+{
+/
+*
+Search
+icon
+is
+12px
+but
+we
+expand
+to
+the
+clear
+button
+size
+so
+they
+*
+overlap
 .
-svg
-)
-;
-margin
--
-inline
--
-end
+That
+doesn
+'
+t
+make
+the
+icon
+noticeably
+less
+crisp
+*
+/
+width
 :
-5px
+14px
 ;
 }
-:
-host
-(
-[
-searchbutton
-]
-)
+.
+textbox
+-
+search
+-
+sign
 .
 textbox
 -
@@ -476,32 +468,21 @@ scaleX
 )
 ;
 }
-:
-host
-(
-[
-searchbutton
-]
-)
 .
 textbox
 -
 search
 -
-icon
-:
-not
-(
-[
-disabled
-]
-)
+sign
 {
-cursor
+margin
+-
+inline
+-
+end
 :
-pointer
+5px
 ;
-}
 }
 .
 textbox
@@ -539,6 +520,25 @@ textbox
 -
 search
 -
+icon
+:
+not
+(
+[
+disabled
+]
+)
+{
+cursor
+:
+pointer
+;
+}
+.
+textbox
+-
+search
+-
 clear
 :
 not
@@ -553,6 +553,108 @@ cursor
 default
 ;
 }
+/
+*
+searchbutton
+disables
+the
+icon
+to
+the
+left
+.
+*
+Otherwise
+we
+don
+'
+t
+show
+the
+search
+icon
+only
+the
+clear
+icon
+see
+*
+bug
+1385902
+*
+/
+:
+host
+(
+[
+searchbutton
+]
+)
+.
+textbox
+-
+search
+-
+sign
+:
+host
+(
+:
+not
+(
+[
+searchbutton
+]
+)
+)
+.
+textbox
+-
+search
+-
+icons
+:
+not
+(
+[
+selectedIndex
+=
+"
+1
+"
+]
+)
+{
+display
+:
+none
+;
+}
+/
+*
+On
+macOS
+-
+moz
+-
+default
+-
+appearance
+:
+searchbox
+provides
+the
+search
+icon
+too
+so
+*
+disable
+those
+there
+unconditionally
+*
+/
 media
 (
 -
@@ -563,6 +665,35 @@ platform
 macos
 )
 {
+.
+textbox
+-
+search
+-
+sign
+.
+textbox
+-
+search
+-
+icons
+:
+not
+(
+[
+selectedIndex
+=
+"
+1
+"
+]
+)
+{
+display
+:
+none
+;
+}
 .
 textbox
 -
@@ -575,106 +706,6 @@ margin
 bottom
 :
 1px
-;
-}
-}
-/
-*
-Don
-'
-t
-leave
-extra
-blank
-space
-with
-long
-placeholders
-(
-see
-bug
-1385902
-)
-*
-/
-media
-(
--
-moz
--
-platform
-:
-macos
-)
-{
-.
-textbox
--
-search
--
-icons
-:
-not
-(
-[
-selectedIndex
-=
-"
-1
-"
-]
-)
-{
-display
-:
-none
-;
-}
-}
-media
-not
-(
--
-moz
--
-platform
-:
-macos
-)
-{
-:
-host
-(
-:
-not
-(
-[
-searchbutton
-]
-)
-)
->
-.
-textbox
--
-search
--
-icons
-:
-not
-(
-[
-selectedIndex
-=
-"
-1
-"
-]
-)
-{
-display
-:
-none
 ;
 }
 }
